refactor: routes, components, menu, remove unused code

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -22,6 +22,8 @@
   --webLightHoverColour: #818cf8;
   --webThirdLightTextColour: #4f46e5;
 
+
+  --tw-shadow-color: #6b7280;
   --baseDark: #000000;
 }
 
