chore: fix minor issues

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -21,7 +21,7 @@
   //--webLightColour: #ff1818;
   --webLightHoverColour: #818cf8;
   --webThirdLightTextColour: #4f46e5;
-
+  --breadcrumbsColour: #4b5563;
 
   --tw-shadow-color: #6b7280;
   --baseDark: #000000;
